BCB Added hello example for vcl.

--- a/program.htm
+++ b/program.htm
@@ -1647,9 +1647,20 @@ FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 C++ Builder 6</h3>
 <hr size="1"><br><br><br><br><br>
 
+&oplus;
+<b>Visual Component Library (VCL)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/bcb6_vcl_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/bcb6_vcl_hello.htm">
+    Hello, world!</a><br>
+
 &dash;
-<a href="program/bcb6_setup.htm">
-開發環境</a><br>
+<a href="program/bcb6_bpr2mak.htm">
+如何將*.bpr轉成*.mak</a><br>
 
 &dash;
 <a href="program/bcb6_fix_wine.htm">
