--- a/program.htm
+++ b/program.htm
@@ -1655,8 +1655,19 @@ C++ Builder 6</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/bcb6_vcl_makefile.htm">
+    main.mak</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/bcb6_vcl_hello.htm">
     Hello, world!</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Single Document Interface (SDI)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/bcb6_vcl_sdi_window.htm">
+        Create Window</a><br>
 
 &dash;
 <a href="program/bcb6_bpr2mak.htm">
