Delphi7 Added more examples for vcl.

--- a/program.htm
+++ b/program.htm
@@ -1683,9 +1683,23 @@ C++ Builder 6</h3>
 Delphi 7</h3>
 <hr size="1"><br><br><br><br><br>
 
-&dash;
-<a href="program/delphi7_setup.htm">
-開發環境</a><br>
+&oplus;
+<b>Visual Component Library (VCL)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/delphi7_vcl_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/delphi7_vcl_hello.htm">
+    Hello, world!</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Single Document Interface (SDI)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/delphi7_vcl_sdi_window.htm">
+        Create Window</a><br>
 <br><br><br><br>
 
 <div id="opencv"></div>
