--- a/program.htm
+++ b/program.htm
@@ -30,6 +30,7 @@
     <a href="#vc">              <img src="img/photos/vc.jpg"            class="t0" title="Visual C++ 6.0"/></a>
     <a href="#bcb6">            <img src="img/photos/bcb6.jpg"          class="t0" title="C++ Builder 6"/></a>
     <a href="#delphi7">         <img src="img/photos/delphi7.jpg"       class="t0" title="Delphi 7"/></a>
+    <a href="#freebasic">       <img src="img/photos/freebasic.jpg"     class="t0" title="FreeBASIC"/></a>
     <a href="#opencv">          <img src="img/photos/opencv.jpg"        class="t0" title="OpenCV"/></a>
     <a href="#sdl">             <img src="img/photos/sdl.jpg"           class="t0" title="SDL"/></a>
     <a href="#wayland">         <img src="img/photos/wayland.jpg"       class="t0" title="Wayland"/></a>
@@ -1700,6 +1701,23 @@ Delphi 7</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/delphi7_vcl_sdi_window.htm">
         Create Window</a><br>
+<br><br><br><br>
+
+<div id="freebasic"></div>
+<h3><img src="img/photos/freebasic.jpg" class="floatLeft"/>
+FreeBASIC</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Win32 API</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_win32_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_win32_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="opencv"></div>
