--- a/program.htm
+++ b/program.htm
@@ -1719,6 +1719,17 @@ Free Pascal</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/freepascal_win32_hello.htm">
     Hello, world!</a><br>
+
+&oplus;
+<b>Simple DirectMedia Layer (SDL) v1.2</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freepascal_sdl_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freepascal_sdl_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="freebasic"></div>
