FreeBASIC Added sdl example.

--- a/program.htm
+++ b/program.htm
@@ -1747,6 +1747,17 @@ FreeBASIC</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/freebasic_win32_hello.htm">
     Hello, world!</a><br>
+
+&oplus;
+<b>Simple DirectMedia Layer (SDL) v1.2</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_sdl_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_sdl_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="opencv"></div>
