--- a/program/freebasic_win32_hello.htm
+++ b/program/freebasic_win32_hello.htm
@@ -13,19 +13,19 @@ main.bas
 </p>
 <pre class="brush:basic">
 #include once "windows.bi"
-
-Declare Function WinMain(byval hInst as HINSTANCE, _
-    byval hPrevInst as HINSTANCE, _
-    byval szCmdLine as zstring ptr, _
-    byval dwCmdShow as integer) as integer
-End WinMain(GetModuleHandle(null), null, Command(), SW_NORMAL)
-
-Function WinMain(byval hInst as HINSTANCE, _
-    byval hPrevInst as HINSTANCE, _
-    byval szCmdLine as zstring ptr, _
-    byval dwCmdShow as integer) as integer
-
-    MessageBox(null, "Hello, world!", "main", MB_OK)
+ 
+Declare Function WinMain(ByVal hInst As HINSTANCE, _
+    ByVal hPrevInst As HINSTANCE, _
+    ByVal szCmdLine As zstring ptr, _
+    ByVal dwCmdShow As integer) As integer
+End WinMain(GetModuleHandle(Null), Null, Command(), SW_NORMAL)
+ 
+Function WinMain(ByVal hInst As HINSTANCE, _
+    ByVal hPrevInst As HINSTANCE, _
+    ByVal szCmdLine As zstring ptr, _
+    ByVal dwCmdShow As integer) As integer
+ 
+    MessageBox(Null, "Hello, world!", "main", MB_OK)
     Return 0
 End Function
 </pre><br>
