--- a/program/freepascal_sdl_hello.htm
+++ b/program/freepascal_sdl_hello.htm
@@ -23,7 +23,7 @@ var
 begin
     SDL_Init(SDL_INIT_VIDEO);
     screen := SDL_SetVideoMode(320, 240, 16, SDL_SWSURFACE);
-    stringRGBA(screen, 100, 100, 'hello, world!', $ff, $ff, $ff, $ff);
+    stringRGBA(screen, 100, 100, 'Hello, world!', $ff, $ff, $ff, $ff);
     SDL_Flip(screen);
     SDL_Delay(3000);
     SDL_Quit;
