--- a/driver.htm
+++ b/driver.htm
@@ -1388,6 +1388,18 @@ Windows NT Driver (Legacy)</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/legacy/cpp_share_memory.htm">
     Share Memory</a><br>
+
+&oplus;
+<b>BASIC</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/legacy_basic_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/legacy_basic_hello.htm">
+    Hello, world!</a><br>
+
 <br><br><br><br>
 
 <div id="mdd"></div>
