--- a/driver/wdm_cpp_setup.htm
+++ b/driver/wdm_cpp_setup.htm
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Windows Driver Model (WDM) - Assembly - <b>開發環境</b></h3>
+<h3><a href="../index.htm">掌機</a> - Windows Driver Model (WDM) - C/C++ - <b>開發環境</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
 https://github.com/steward-fu/ddk<br><br>
 
-將<b>masm32</b>資料夾複製到<b>c:\</b>根目錄下並且添加如下環境變數
+將<b>xpddk</b>資料夾複製到<b>c:\</b>根目錄下並且添加如下環境變數
 </p>
 <pre>
-PATH=c:\masm32\bin
+PATH=c:\xpddk\bin
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
