--- a/driver.htm
+++ b/driver.htm
@@ -497,7 +497,7 @@ Windows NT Driver (Legacy)</h3>
 <b>Assembly</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/legacy_asm_setup.htm">
+    <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
@@ -588,8 +588,8 @@ Windows NT Driver (Legacy)</h3>
 &oplus;
 <b>Pascal</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/legacy/pascal_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
@@ -680,8 +680,8 @@ Windows NT Driver (Legacy)</h3>
 &oplus;
 <b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/legacy/cpp_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
@@ -777,7 +777,7 @@ Windows NT Driver (Legacy)</h3>
 <b>BASIC</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/legacy_basic_setup.htm">
+    <a href="driver/wdm_basic_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
