--- a/driver.htm
+++ b/driver.htm
@@ -35,16 +35,16 @@
 Windows Driver Model (WDM)</h3>
 <hr size="1"><br><br><br><br><br>
 
+&dash;
+<a href="driver/wdm_driverentry.htm">
+驅動程式進入點DriverEntry()</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_asm_driverentry.htm">
-    DriverEntry</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_adddevice.htm">
@@ -158,10 +158,6 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_driverentry.htm">
-    DriverEntry()</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/pascal_adddevice.htm">
     AddDevice()</a><br>
 
@@ -271,10 +267,6 @@ Windows Driver Model (WDM)</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_driverentry.htm">
-    DriverEntry()</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/cpp_adddevice.htm">
