--- a/driver.htm
+++ b/driver.htm
@@ -39,16 +39,16 @@ Windows Driver Model (WDM)</h3>
 <a href="driver/wdm_driverentry.htm">
 驅動程式進入點DriverEntry()</a><br>
 
+&dash;
+<a href="driver/wdm_adddevice.htm">
+系統透過呼叫AddDevice()來新增裝置</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_adddevice.htm">
-    AddDevice()</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_driverunload.htm">
@@ -158,10 +158,6 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_adddevice.htm">
-    AddDevice()</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/pascal_driverunload.htm">
     DriverUnload()</a><br>
 
@@ -267,10 +263,6 @@ Windows Driver Model (WDM)</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_adddevice.htm">
-    AddDevice()</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/cpp_driverunload.htm">
