--- a/driver/wdm_adddevice.htm
+++ b/driver/wdm_adddevice.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Windows Driver Model (WDM) - <b>系統透過呼叫AddDevice()來新增裝置</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - <b>系統透過呼叫AddDevice()來新增裝置</b></h3>
 <hr size="1"><br>
 <p>
 當系統找到對應的裝置(透過INF檔案安裝後)且驅動程式被系統成功載入後，AddDevice()就會被系統呼叫，而AddDevice()是在DriverEntry()裡面註冊的，所以系統才會知道AddDevice()位於何處，名稱不一定要用AddDevice，但是參數跟回傳值必須遵照Microsoft的定義，否則會有問題<br><br>
