--- a/driver/wdm_driverentry.htm
+++ b/driver/wdm_driverentry.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Windows Driver Model (WDM) - <b>驅動程式進入點DriverEntry()</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - <b>驅動程式進入點DriverEntry()</b></h3>
 <hr size="1"><br>
 <p>
 C/C++程式的進入點是main()，而對於WDM驅動程式而言，它的進入點則是DriverEntry()，Microsoft規定DriverEntry()必須使用C語言方式Export，若是使用C++檔案(.cpp)撰寫，則必須使用<b>export "C"</b>關鍵字做修飾輸出，否則系統將無法正確載入驅動程式<br><br>
