--- a/driver.htm
+++ b/driver.htm
@@ -43,16 +43,16 @@ Windows Driver Model (WDM)</h3>
 <a href="driver/wdm_adddevice.htm">
 系統透過呼叫AddDevice()來新增裝置</a><br>
 
+&dash;
+<a href="driver/wdm_driverunload.htm">
+系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_driverunload.htm">
-    DriverUnload()</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_hello.htm">
@@ -158,10 +158,6 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_driverunload.htm">
-    DriverUnload()</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/pascal_hello.htm">
     Hello, world!</a><br>
 
@@ -263,10 +259,6 @@ Windows Driver Model (WDM)</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
     開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_driverunload.htm">
-    DriverUnload()</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/cpp_hello.htm">
