--- a/program.htm
+++ b/program.htm
@@ -1730,6 +1730,10 @@ Free Pascal</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/freepascal_sdl_hello.htm">
     Hello, world!</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freepascal_sdl_fill.htm">
+    Fill Color</a><br>
 <br><br><br><br>
 
 <div id="freebasic"></div>
@@ -1883,10 +1887,6 @@ Simple DirectMedia Layer (SDL)</h3>
         Fill Color</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
-        <a href="program/sdl_cpp_box.htm">
-        Draw Box</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/sdl_cpp_bmp.htm">
         Load BMP</a><br>
 
@@ -1984,6 +1984,10 @@ Simple DirectMedia Layer (SDL)</h3>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
         <b>GFX</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_box.htm">
+            Draw Box</a><br>
         
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/sdl_cpp_gfx_pixel.htm">
