--- a/program/sdl_cpp_gfx_box.htm
+++ b/program/sdl_cpp_gfx_box.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - Simple DirectMedia Layer (SDL) - v1.2 - C/C++ - <b>Draw Box</b></h3>
+<h3><a href="../program.htm">程式語言</a> - Simple DirectMedia Layer (SDL) - v1.2 - C/C++ - GFX - <b>Draw Box</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -41,7 +41,7 @@ $ gcc main.c -o main -lSDL -lSDL_gfx -I/usr/include/SDL
 $ ./main
 </pre>
 <p>
-<img style="border:0px" src="sdl_cpp_box/1.jpg" class="maxSize">
+<img style="border:0px" src="sdl_cpp_gfx_box/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
