FreeBASIC Added sdl example.

--- a/program.htm
+++ b/program.htm
@@ -1763,6 +1763,10 @@ FreeBASIC</h3>
     <a href="program/freebasic_sdl_hello.htm">
     Hello, world!</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_sdl_fill.htm">
+    Fill Color</a><br>
+
 &dash;
 <a href="program/freebasic_build.htm">
 Build FreeBASIC(aarch64)</a><br>
