--- a/driver.htm
+++ b/driver.htm
@@ -54,9 +54,13 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_hello.htm">
-    Hello world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_inf.htm">
+    main.inf</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_hello.htm">
+    Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     File<br>
