--- a/driver.htm
+++ b/driver.htm
@@ -161,8 +161,16 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_inf.htm">
+    main.inf</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_makefile.htm">
+    make.bat</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_hello.htm">
     Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
