--- a/driver.htm
+++ b/driver.htm
@@ -272,9 +272,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_hello.htm">
-    Hello world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_inf.htm">
+    main.inf</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_sources.htm">
+    sources</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_makefile.htm">
+    makefile</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_hello.htm">
+    Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     File<br>
