--- a/driver/wdm_cpp_hello.htm
+++ b/driver/wdm_cpp_hello.htm
@@ -147,7 +147,7 @@ DESCRIPTION="MyDriver"
 編譯
 </p>
 <pre>
-c:\xpddk\bin\setenv.bat c:\xpddk chk
+c:\winddk\bin\setenv.bat c:\winddk chk
 build -cefw
 </pre><br>
 
