--- a/driver/wdm_cpp_setup.htm
+++ b/driver/wdm_cpp_setup.htm
@@ -8,10 +8,10 @@
 參考資訊：<br>
 https://github.com/steward-fu/ddk<br><br>
 
-將<b>xpddk</b>資料夾複製到<b>c:\</b>根目錄下並且添加如下環境變數
+將<b>winddk</b>資料夾複製到<b>c:\</b>根目錄下並且添加如下環境變數
 </p>
 <pre>
-PATH=c:\xpddk\bin
+PATH=c:\winddk\bin
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
