Free Pascal Added sdl example.

--- a/program.htm
+++ b/program.htm
@@ -1734,6 +1734,10 @@ Free Pascal</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/freepascal_sdl_fill.htm">
     Fill Color</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freepascal_sdl_bmp.htm">
+    Load BMP</a><br>
 <br><br><br><br>
 
 <div id="freebasic"></div>
