--- a/program/freepascal_sdl_bmp.htm
+++ b/program/freepascal_sdl_bmp.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - Free Pascal - Simple DirectMedia Layer (SDL) v1.2 - <b>Fill Color</b></h3>
+<h3><a href="../program.htm">程式語言</a> - Free Pascal - Simple DirectMedia Layer (SDL) v1.2 - <b>Load BMP</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -19,26 +19,16 @@ uses sdl;
  
 var
     rt : SDL_Rect;
+    bmp : PSDL_Surface;
     screen : PSDL_Surface;
  
 begin
     SDL_Init(SDL_INIT_VIDEO);
     screen := SDL_SetVideoMode(320, 240, 16, SDL_SWSURFACE);
-    SDL_FillRect(screen, @screen^.clip_rect, SDL_MapRGB(screen^.format, $ff, $00, $00));
-
-    rt.x := 50;
-    rt.y := 50;
-    rt.w := 30;
-    rt.h := 30;
-    SDL_FillRect(screen, @rt, SDL_MapRGB(screen^.format, $00, $ff, $00));
- 
-    rt.x := 100;
-    rt.y := 100;
-    rt.w := 50;
-    rt.h := 100;
-    SDL_FillRect(screen, @rt, SDL_MapRGB(screen^.format, $00, $00, $ff));
- 
+    bmp := SDL_LoadBMP('main.bmp'); 
+    SDL_BlitSurface(bmp, nil, screen, nil);
     SDL_Flip(screen);
+    SDL_FreeSurface(bmp);
     SDL_Delay(3000);
     SDL_Quit;
 end.
@@ -52,7 +42,7 @@ $ fpc main.pp
 $ ./main
 </pre>
 <p>
-<img style="border:0px" src="freepascal_sdl_fill/1.jpg" class="maxSize">
+<img style="border:0px" src="freepascal_sdl_bmp/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
