--- a/driver/wdm_asm_hello.htm
+++ b/driver/wdm_asm_hello.htm
@@ -156,7 +156,7 @@ DESCRIPTION="MyDriver"
 </p>
 <pre>
 c:\masm32\bin\ml /c /coff /Cp main.asm
-c:\masm32\bin\link.exe main.obj /driver /base:0x10000 /subsystem:native,5.01 /entry:GsDriverEntry@8 "c:\masm32\lib\wxp\i386\bufferoverflowk.lib" "c:\masm32\lib\wxp\i386\ntoskrnl.lib" /OUT:main.sys
+c:\masm32\bin\link.exe main.obj /driver /base:0x10000 /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" /OUT:main.sys
 </pre><br>
 
 <p>
