FreeBASIC Added sdl example.

--- a/driver/wdm_basic_hello.htm
+++ b/driver/wdm_basic_hello.htm
@@ -40,7 +40,7 @@ function IrpDispatch(byval pMyDevice as PDEVICE_OBJECT, byval pIrp as PIRP) as N
         IoDetachDevice(pNextDevice)
         IoDeleteDevice(pMyDevice)
         IoCompleteRequest(pIrp, IO_NO_INCREMENT)
-        Return STATUS_SUCCESS
+        return STATUS_SUCCESS
     End If
     
     IoSkipCurrentIrpStackLocation(pIrp)
