--- a/program.htm
+++ b/program.htm
@@ -1771,6 +1771,10 @@ FreeBASIC</h3>
     <a href="program/freebasic_sdl_fill.htm">
     Fill Color</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/freebasic_sdl_bmp.htm">
+    Load BMP</a><br>
+
 &dash;
 <a href="program/freebasic_build.htm">
 Build FreeBASIC(aarch64)</a><br>
