--- a/program/freebasic_win32_hello.htm
+++ b/program/freebasic_win32_hello.htm
@@ -14,20 +14,20 @@ main.bas
 <pre class="brush:basic">
 #include once "windows.bi"
  
-Declare Function WinMain(ByVal hInst As HINSTANCE, _
-    ByVal hPrevInst As HINSTANCE, _
-    ByVal szCmdLine As zstring ptr, _
-    ByVal dwCmdShow As integer) As integer
-End WinMain(GetModuleHandle(Null), Null, Command(), SW_NORMAL)
+declare function WinMain(byval hInst as HINSTANCE, _
+    byval hPrevInst as HINSTANCE, _
+    byval szCmdLine as zstring ptr, _
+    byval dwCmdShow as integer) as integer
+end WinMain(GetModuleHandle(null), null, Command(), SW_NORMAL)
  
-Function WinMain(ByVal hInst As HINSTANCE, _
-    ByVal hPrevInst As HINSTANCE, _
-    ByVal szCmdLine As zstring ptr, _
-    ByVal dwCmdShow As integer) As integer
+function WinMain(byval hInst as HINSTANCE, _
+    byval hPrevInst as HINSTANCE, _
+    byval szCmdLine as zstring ptr, _
+    byval dwCmdShow as integer) as integer
  
-    MessageBox(Null, "Hello, world!", "main", MB_OK)
-    Return 0
-End Function
+    MessageBox(null, "Hello, world!", "main", MB_OK)
+    return 0
+end function
 </pre><br>
 
 <p>
