--- a/driver.htm
+++ b/driver.htm
@@ -48,7 +48,7 @@ Windows Driver Model (WDM)</h3>
 系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
 
 &oplus;
-<b>Assembly</b><br>
+<b>Assembly (MASM32)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
@@ -155,7 +155,7 @@ Windows Driver Model (WDM)</h3>
         Semaphore</a><br>
 
 &oplus;
-<b>BASIC</b><br>
+<b>BASIC (FreeBASIC)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_basic_setup.htm">
@@ -166,7 +166,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>C/C++</b><br>
+<b>C/C++ (DDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
@@ -297,7 +297,7 @@ Windows Driver Model (WDM)</h3>
     PsSetCreateProcessNotifyRoutine()</a><br>
 
 &oplus;
-<b>DriverWorks</b><br>
+<b>C/C++ (DriverWorks)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_ds_setup.htm">
@@ -320,7 +320,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>Pascal</b><br>
+<b>Pascal (DDDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_pascal_setup.htm">
