Debian How to install win98.

--- a/system.htm
+++ b/system.htm
@@ -215,6 +215,13 @@ shell script "$、{}、%、#"用途</a><br>
 解決"BFD_ASSERT (out_attr[Tag_ABI_HardFP_use].i == 0) assert failed elf32-arm.c"問題</a><br>
 
 &oplus;
+<b>QEMU</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/debian_qemu_win98.htm">
+    安裝Windows 98</a><br>
+
+&oplus;
 <b>ARM</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
