Pro1 How to display cursor in container.

--- a/phone.htm
+++ b/phone.htm
@@ -20,9 +20,9 @@
 <div id="page"><br><br>
 <p>
     <a href="#n900">            <img src="img/photos/n900.jpg"          class="t0" title="Nokia N900"/></a>
-    <a href="#pinephone">       <img src="img/photos/pinephone.jpg"     class="t0" title="PINE64 PinePhone"/></a>
     <a href="#pro1">            <img src="img/photos/pro1.jpg"          class="t0" title="F(x)tec Pro1"/></a>
     <a href="#pro1x">           <img src="img/photos/pro1x.jpg"         class="t0" title="F(x)tec Pro1 X"/></a>
+    <a href="#pinephone">       <img src="img/photos/pinephone.jpg"     class="t0" title="PINE64 PinePhone"/></a>
     <a href="#sk17i">           <img src="img/photos/sk17i.jpg"         class="t0" title="Sony Ericsson Xperia Mini Pro(SK17i)"/></a>
     <a href="#astro">           <img src="img/photos/astro.jpg"         class="t0" title="Astro Slide 5G"/></a>
     <a href="#cosmo">           <img src="img/photos/cosmo.jpg"         class="t0" title="Cosmo Communicator"/></a>
@@ -398,131 +398,6 @@ Mugen Power 3.7V 2400mA電池</a><br>
     Build Kernel 6.1.9</a><br>
 <br><br><br><br>
 
-<div id="pinephone"></div>
-<h3><img src="img/photos/pinephone.jpg" class="floatLeft"/>
-PINE64 PinePhone</h3>
-<hr size="1"><br><br><br><br><br>
-&dash;
-<a href="phone/pinephone_spec.htm">
-簡要規格</a><br>
-
-&dash;
-<a href="phone/pinephone_keyboard.htm">
-鍵盤底座</a><br>
-
-&dash;
-<a href="phone/pinephone_pogo.htm">
-Pogo Pins</a><br>
-
-&dash;
-<a href="phone/pinephone_uart.htm">
-UART Pins</a><br>
-
-&dash;
-<a href="phone/pinephone_towboot.htm">
-安裝Tow-boot</a><br>
-
-&dash;
-<a href="phone/pinephone_build_towboot.htm">
-Build Tow-boot</a><br>
-
-&dash;
-<a href="phone/pinephone_flashmode.htm">
-如何進入Flashing Mode</a><br>
-
-&oplus;
-<b>Sailfish OS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_setup.htm">
-    安裝系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_lxc.htm">
-    安裝LXC</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_keyboard.htm">
-    設定鍵盤</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_wget.htm">
-    如何安裝Wget</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_landscape.htm">
-    如何讓桌面可以橫向顯示</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_fix_home.htm">
-    解決無法掛載/home問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_sfos_fix_repo.htm">
-    解決Repository adaptation-community is invalid問題</a><br>
-
-&oplus;
-<b>Fedora</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_fedora_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>LuneOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_luneos_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Mobian</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_mobian_setup.htm">
-    安裝系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_mobian_xfce4.htm">
-    安裝XFCE4</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_mobian_build_kernel.htm">
-    Build Kernel 6.1.12</a><br>
-
-&oplus;
-<b>Kali Linux</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_kali_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Maemo Leste</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_maemo_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Manjaro ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_manjaro_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Ubuntu Touch</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_ubuntu_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>postmarketOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_postmarketos_setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Arch Linux ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/pinephone_arch_setup.htm">
-    安裝系統</a><br>
-<br><br><br><br>
-
 <div id="pro1"></div>
 <h3><img src="img/photos/pro1.jpg" class="floatLeft"/>
 F(x)tec Pro1</h3>
@@ -562,6 +437,13 @@ F(x)tec Pro1</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pro1_sfos_fix_clang.htm">
     解決Undefined reference to stpcpy問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Debian</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/pro1_sfos_debian_cursor.htm">
+        如何顯示鼠標</a><br>
 
 &oplus;
 <b>Android</b><br>
@@ -815,6 +697,131 @@ F(x)tec Pro1 X</h3>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/install_ubuntu.htm">
+    安裝系統</a><br>
+<br><br><br><br>
+
+<div id="pinephone"></div>
+<h3><img src="img/photos/pinephone.jpg" class="floatLeft"/>
+PINE64 PinePhone</h3>
+<hr size="1"><br><br><br><br><br>
+&dash;
+<a href="phone/pinephone_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="phone/pinephone_keyboard.htm">
+鍵盤底座</a><br>
+
+&dash;
+<a href="phone/pinephone_pogo.htm">
+Pogo Pins</a><br>
+
+&dash;
+<a href="phone/pinephone_uart.htm">
+UART Pins</a><br>
+
+&dash;
+<a href="phone/pinephone_towboot.htm">
+安裝Tow-boot</a><br>
+
+&dash;
+<a href="phone/pinephone_build_towboot.htm">
+Build Tow-boot</a><br>
+
+&dash;
+<a href="phone/pinephone_flashmode.htm">
+如何進入Flashing Mode</a><br>
+
+&oplus;
+<b>Sailfish OS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_lxc.htm">
+    安裝LXC</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_keyboard.htm">
+    設定鍵盤</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_wget.htm">
+    如何安裝Wget</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_landscape.htm">
+    如何讓桌面可以橫向顯示</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_fix_home.htm">
+    解決無法掛載/home問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_fix_repo.htm">
+    解決Repository adaptation-community is invalid問題</a><br>
+
+&oplus;
+<b>Fedora</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_fedora_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>LuneOS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_luneos_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Mobian</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_xfce4.htm">
+    安裝XFCE4</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_build_kernel.htm">
+    Build Kernel 6.1.12</a><br>
+
+&oplus;
+<b>Kali Linux</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_kali_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Maemo Leste</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_maemo_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Manjaro ARM</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_manjaro_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Ubuntu Touch</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_ubuntu_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>postmarketOS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_postmarketos_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Arch Linux ARM</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_arch_setup.htm">
     安裝系統</a><br>
 <br><br><br><br>
 
