--- a/driver.htm
+++ b/driver.htm
@@ -48,6 +48,13 @@ Windows Driver Model (WDM)</h3>
 系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
 
 &oplus;
+<b>Assembly (ObjAsm)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_objasm_setup.htm">
+    開發環境</a><br>
+
+&oplus;
 <b>Assembly (MASM32)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
