ObjAsm How to build uasm.

--- a/program.htm
+++ b/program.htm
@@ -693,6 +693,10 @@ Set Scrollbar</a><br>
     Draw Text</a><br>
     
 &dash;
+<a href="program/objasm_build_uasm.htm">
+Build_UASM</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
