OpenAI Fixed json format issue.

--- a/system.htm
+++ b/system.htm
@@ -668,6 +668,10 @@ CVE-2023-37273</a><br>
 &dash;
 <a href="system/openai_cve_2023_37274.htm">
 CVE-2023-37274</a><br>
+
+&dash;
+<a href="system/openai_fix_json.htm">
+解決JSON Validation Error: 'thoughts' is a required property問題</a><br>
 <br><br><br><br>
 </p>
 
