--- a/driver.htm
+++ b/driver.htm
@@ -35,27 +35,30 @@
 Windows Driver Model (WDM)</h3>
 <hr size="1"><br><br><br><br><br>
 
-&dash;
-<a href="driver/wdm_driverentry.htm">
-驅動程式進入點DriverEntry()</a><br>
-
-&dash;
-<a href="driver/wdm_adddevice.htm">
-系統透過呼叫AddDevice()來新增裝置</a><br>
-
-&dash;
-<a href="driver/wdm_driverunload.htm">
-系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
-
 &oplus;
-<b>Assembly (ObjAsm)</b><br>
+<b>教學說明</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_driverentry.htm">
+    1. 驅動程式進入點DriverEntry()</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_adddevice.htm">
+    2. 系統透過呼叫AddDevice()來新增裝置</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_driverunload.htm">
+    3. 系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
+
+&oplus;
+<b>範例解說 - Assembly (ObjAsm)</b><br>
+
+   &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_objasm_setup.htm">
     開發環境</a><br>
 
 &oplus;
-<b>Assembly (MASM32)</b><br>
+<b>範例解說 - Assembly (MASM32)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
@@ -162,7 +165,7 @@ Windows Driver Model (WDM)</h3>
         Semaphore</a><br>
 
 &oplus;
-<b>BASIC (FreeBASIC)</b><br>
+<b>範例解說 - BASIC (FreeBASIC)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_basic_setup.htm">
@@ -173,7 +176,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>C/C++ (DDK)</b><br>
+<b>範例解說 - C/C++ (DDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
@@ -304,7 +307,7 @@ Windows Driver Model (WDM)</h3>
     PsSetCreateProcessNotifyRoutine()</a><br>
 
 &oplus;
-<b>C/C++ (DriverWorks)</b><br>
+<b>範例解說 - C/C++ (DriverWorks)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_ds_setup.htm">
@@ -327,7 +330,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>Pascal (DDDK)</b><br>
+<b>範例解說 - Pascal (DDDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_pascal_setup.htm">
