--- a/driver/wdm_driverunload.htm
+++ b/driver/wdm_driverunload.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - <b>系統透過呼叫DriverUnload()來卸載驅動程式</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 教學說明 - <b>3. 系統透過呼叫DriverUnload()來卸載驅動程式</b></h3>
 <hr size="1"><br>
 <p>
 當驅動程式準備被系統卸載時，DriverUnload()會被系統呼叫，這是驅動程式最後可以釋放資源的地方，若沒有適當的釋放資源，則驅動程式無法被卸載，遇到這種狀況時，系統會提示需要重新開機才可以正確卸載驅動程式，而DriverUnload()是在DriverEntry()裡面註冊的，所以系統才會知道DriverUnload()位於何處<br><br>
