--- a/driver.htm
+++ b/driver.htm
@@ -50,6 +50,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_driverunload.htm">
     3. 系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_file.htm">
+    4. User Application透過檔案系統跟驅動程式溝通</a><br>
+
 &oplus;
 <b>範例解說 - Assembly (ObjAsm)</b><br>
 
