--- a/driver.htm
+++ b/driver.htm
@@ -76,12 +76,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_hello.htm">
     Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    File<br>
-        
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_file.htm">
-        IRP</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_file.htm">
+    Handle File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/asm_file-buffer.htm">
