ObjAsm How to obtain the address of object template.

--- a/program.htm
+++ b/program.htm
@@ -697,6 +697,10 @@ Set Scrollbar</a><br>
 Build_UASM</a><br>
 
 &dash;
+<a href="program/objasm_obj_addr.htm">
+如何取得Object Template Address</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
