ObjAsm How to use SetObject.

--- a/program.htm
+++ b/program.htm
@@ -697,6 +697,10 @@ Set Scrollbar</a><br>
 Build_UASM</a><br>
 
 &dash;
+<a href="program/objasm_setobj.htm">
+如何指定Instance給SetObject</a><br>
+
+&dash;
 <a href="program/objasm_obj_addr.htm">
 如何取得Object Template Address</a><br>
 
