Debian How to mount local directory into qemu.

--- a/system.htm
+++ b/system.htm
@@ -217,9 +217,13 @@ shell script "$、{}、%、#"用途</a><br>
 &oplus;
 <b>QEMU</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="system/debian_qemu_win98.htm">
     安裝Windows 98</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_qemu_mount.htm">
+    如何掛載Local Directory</a><br>
 
 &oplus;
 <b>ARM</b><br>
