--- a/system/debian_qemu_win98.htm
+++ b/system/debian_qemu_win98.htm
@@ -14,7 +14,7 @@ https://www.lysator.liu.se/~jonass/qemu_win98.html<br><br>
 <pre>
 $ qemu-img create -f qcow2 win98.img 1G
 $ qemu-img create -f qcow2 data.qcow2 1G
-$ qemu-system-i386 -hda win98.img -drive file=windows98se.iso,if=ide,index=1,media=cdrom -boot c -cpu coreduo -m 512 -vga cirrus -net nic,model=pcnet -net user,smb=/tmp -rtc base=localtime -accel tcg -no-hpet -device AC97 -drive file=data.qcow2 -serial none -parallel none
+$ qemu-system-i386 -hda win98.img -cdrom win98se.iso -boot c -cpu coreduo -m 512 -vga cirrus -net nic,model=pcnet -rtc base=localtime -accel tcg -no-hpet -device AC97 -drive file=data.qcow2 -serial none -parallel none
 </pre>
 <p>
 P.S. 安裝完成後再掛載data.qcow2<br><br>
