--- a/driver.htm
+++ b/driver.htm
@@ -54,6 +54,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_file.htm">
     4. User Application透過檔案系統跟驅動程式溝通</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_buffer.htm">
+    5. I/O Manager的Buffer使用策略</a><br>
+
 &oplus;
 <b>範例解說 - Assembly (ObjAsm)</b><br>
 
