--- a/system/debian_build_wine.htm
+++ b/system/debian_build_wine.htm
@@ -13,7 +13,7 @@ https://www.reddit.com/r/wine_gaming/comments/7xgux5/wine_3_how_to_build_a_prope
 </p>
 <pre>
 $ cd
-$ git clone git://source.winehq.org/git/wine.git
+$ git clone https://gitlab.winehq.org/wine/wine --recursive
 $ cd wine
 $ mkdir -p build/wine-32
 $ mkdir -p build/wine-64
