--- a/driver/wdm_asm_hello.htm
+++ b/driver/wdm_asm_hello.htm
@@ -155,8 +155,8 @@ DESCRIPTION="MyDriver"
 編譯
 </p>
 <pre>
-c:\masm32\bin\ml.exe /c /coff /Cp main.asm
-c:\masm32\bin\link.exe main.obj /driver /base:0x10000 /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" /OUT:main.sys
+c:\masm32\bin\ml.exe /c /coff /Cp /Zi /Zd main.asm
+c:\masm32\bin\link.exe main.obj /driver /base:0x10000 /debug /debugtype:cv /pdb:main.pdb /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" /out:main.sys
 </pre><br>
 
 <p>
