--- a/driver.htm
+++ b/driver.htm
@@ -84,9 +84,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_file.htm">
     Handle File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_file-buffer.htm">
-        DO_BUFFERED_IO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_file_buffer.htm">
+    Choose DO_BUFFERED_IO for File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/asm_file-direct-pio.htm">
