--- a/driver.htm
+++ b/driver.htm
@@ -73,6 +73,10 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_makefile.htm">
+    make.bat</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_inf.htm">
     main.inf</a><br>
 
