--- a/driver.htm
+++ b/driver.htm
@@ -92,9 +92,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_file_buffer.htm">
     Choose DO_BUFFERED_IO for File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_file-direct-pio.htm">
-        DO_DIRECT_IO(PIO)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_file_direct.htm">
+    Choose DO_DIRECT_IO for File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/asm_file-direct-dma.htm">
