--- a/driver.htm
+++ b/driver.htm
@@ -96,13 +96,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_file_direct.htm">
     Choose DO_DIRECT_IO for File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_file-direct-dma.htm">
-        DO_DIRECT_IO(DMA)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_file-neither.htm">
-        DO_NEITHER_IO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_file_neither.htm">
+    Choose DO_NEITHER_IO for File IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     IOCTL<br>
