--- a/driver/wdm_buffer.htm
+++ b/driver/wdm_buffer.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 教學說明 - <b>5. I/O Manager的Buffer使用策略</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 教學說明 - <b>5. I/O Manager的File Buffer使用策略</b></h3>
 <hr size="1"><br>
 <p>
 在AddDevice()中，當Create Device後，必須初始化相關旗標，其中有一個設定是關於I/O Manager的Buffer使用方式
